--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "__MSG_appName__",
-    "version": "0.0.1",
+    "name": "Timer!",
+    "version": "0.0.2",
     "manifest_version": 2,
-    "description": "__MSG_appDescription__",
+    "description": "Helps you track the time you spent on your tasks.",
     "icons": {
         "16": "images/icon-16.png",
         "128": "images/icon-128.png"
