--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Timer!",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "manifest_version": 2,
     "description": "Helps you track the time you spent on your tasks.",
     "icons": {
@@ -15,8 +15,11 @@
     },
   "browser_action": {
     "default_icon": {
+      "16": "images/icon-16.png",
       "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
+      "38": "images/icon-38.png",
+      "48": "images/icon-48.png",
+      "128": "images/icon-128.png"
     },
     "default_title": "time",
     "default_popup": "popup.html"
